--- a/style/style.css
+++ b/style/style.css
@@ -162,7 +162,7 @@ text-decoration-line:none;
         font: 16px Nunito sans,sans-serif;;
        }
 
-       .lm{
+       .IM{
         position: relative;
         left: 545px;
         margin-top: 50px;
